report almost done

--- a/final_report/include/appendix_structure.tex
+++ b/final_report/include/appendix_structure.tex
@@ -12,7 +12,7 @@ The structure for the trusted code base is
 \end{verbatim}
 whereas the structure for the non-trusted code base is
 \begin{verbatim}
-    SwapIFC.Trusted:
+    SwapIFC:
         exposed modules:
             SwapIFC.Auxiliary (mkHigh, mkLow, lprint)
             SwapIFC.Types
