--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -52,8 +52,8 @@
 \newpage
 \clearpage
 
-\bibliography{references} % references.bib
 \addcontentsline{toc}{chapter}{\numberline{}References} % For pdf, remove \numberline{} ?
+\bibliography{references} % references.bib
 \setspecialhdr
 
 % Appendices
@@ -66,6 +66,8 @@
   \input{include/appendix_num}
   \newpage
   \input{include/appendix_testing}
+  \newpage
+  \input{include/appendix_source}
 \end{appendices}
 %\csname phantomsection\endcsname
 %\addcontentsline{toc}{part}{\appendixname}
