report - final version

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -36,6 +36,9 @@
 \input{chapters/background}
 \newpage
 \clearpage
+\input{chapters/goals_limitations}
+\newpage
+\clearpage
 \input{chapters/prototypes}
 \newpage
 \clearpage
